--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
 body {
   margin: 0;
   padding: 0;
+  font-family:'Open Sans', sans-serif;
 }
