--- a/src/components/ilgi/Pixel/Edit/EditColor/EditColor.css
+++ b/src/components/ilgi/Pixel/Edit/EditColor/EditColor.css
@@ -1,5 +1,6 @@
 .EditColor {
-  margin: 10px auto;
+  margin-top: 80px !important;
+  margin: 20px auto;
   width: 80%; }
   @media (min-width: 768px) and (max-width: 1023px) {
     .EditColor {
