--- a/src/components/Inbox/Event/Event.css
+++ b/src/components/Inbox/Event/Event.css
@@ -1,12 +1,12 @@
-.Todo {
+.Event_Card {
   width: 85vw;
-  margin: 100px auto 20px;
+  margin: 20px auto;
   padding: 20px; }
   @media (min-width: 768px) and (max-width: 1023px) {
-    .Todo {
-      margin: 20px;
-      width: 50%; } }
+    .Event_Card {
+      width: 50%;
+      margin: 20px; } }
   @media (min-width: 1024px) {
-    .Todo {
+    .Event_Card {
       width: 50%;
       margin: 20px; } }
