--- a/src/components/Inbox/Event/Event.scss
+++ b/src/components/Inbox/Event/Event.scss
@@ -1,12 +1,12 @@
 @import "../../../sass/_media.scss";
 
-.Todo{
+.Event_Card{
     width: 85vw;
-    margin: 100px auto 20px;
-    padding:20px;
+    margin: 20px auto;
+    padding: 20px;
     @include tablet{
-      margin:20px;
       width:50%;
+      margin:20px;
     }
     @include desktop{
      width: 50%;
