--- a/src/components/Inbox/Todo/Todo.css
+++ b/src/components/Inbox/Todo/Todo.css
@@ -1,12 +1,10 @@
 .Todo {
   width: 85vw;
-  margin: 100px auto 20px;
-  padding: 20px; }
+  margin: 20px auto;
+  padding: 50px 100px; }
   @media (min-width: 768px) and (max-width: 1023px) {
     .Todo {
-      margin: 20px;
-      width: 50%; } }
+      width: 80vw; } }
   @media (min-width: 1024px) {
     .Todo {
-      width: 50%;
-      margin: 20px; } }
+      width: 60vw; } }
