--- a/src/components/ilgi/Pixel/PixelHeader/PixelHeader.scss
+++ b/src/components/ilgi/Pixel/PixelHeader/PixelHeader.scss
@@ -5,7 +5,7 @@
     left: auto;
     right: 0;
     position: fixed;
-    width: 100vw;
+    width: 100%;
     transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     z-index: 1100;
     pixelHeader-info{
