--- a/src/components/ilgi/Pixel/Pixel.css
+++ b/src/components/ilgi/Pixel/Pixel.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   width: 85vw;
-  margin: 20px auto; }
+  margin: 20px auto 100px; }
   @media (min-width: 768px) and (max-width: 1023px) {
     .Pixel pixel-bottom {
       width: 80vw;
