--- a/src/components/ilgi/Pixel/Pixel.scss
+++ b/src/components/ilgi/Pixel/Pixel.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     width: 85vw;
-    margin: 20px auto;
+    margin: 20px auto 100px;
     @include tablet {
       width: 80vw;
       flex-direction: row;
