--- a/src/components/Inbox/Todo/Todo.scss
+++ b/src/components/Inbox/Todo/Todo.scss
@@ -7,11 +7,22 @@
     @include tablet{
       width:80vw;
       padding:50px 80px;
-
     }
     @include desktop{
      width: 60vw;
      padding:50px 100px;
-
     }
+    todo-add{
+      display: flex;
+      flex-direction: row;
+      i{
+        font-size: 2em;
+        margin:15px;
+     }
+    .Todo_input{
+     width:80%;
+     margin:5px; 
+      font-size: 2em;
+    }
+  }
 }
