--- a/src/components/ilgi/Home/Home.css
+++ b/src/components/ilgi/Home/Home.css
@@ -1,30 +1,60 @@
 .Home .Home_containerBackground {
-  background-color: #d7e1e5;
-  width: 700px;
-  margin: 300px 15px;
+  width: 100vw;
+  margin: 50px 15px;
   padding: 0; }
   @media (min-width: 768px) and (max-width: 1023px) {
     .Home .Home_containerBackground {
       width: 80vw;
-      margin: 300px auto 50px; } }
+      margin: 50px auto; } }
   @media (min-width: 1024px) {
     .Home .Home_containerBackground {
       width: 60vw;
-      margin: 300px auto 50px; } }
+      margin: 50px auto; } }
   .Home .Home_containerBackground .grid-container {
     padding: 0;
     display: grid;
     width: 100%;
-    grid-gap: 3px;
     justify-content: center;
-    grid-template-columns: 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5%; }
+    font-size: 0.6em;
+    grid-template-columns: 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw 8vw; }
+    @media (min-width: 768px) and (max-width: 1023px) {
+      .Home .Home_containerBackground .grid-container {
+        font-size: 1em;
+        grid-template-columns: 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8%; } }
+    @media (min-width: 1024px) {
+      .Home .Home_containerBackground .grid-container {
+        font-size: 1em;
+        grid-template-columns: 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8% 8%; } }
     .Home .Home_containerBackground .grid-container .grid-item {
-      background-color: white;
       text-align: center; }
       .Home .Home_containerBackground .grid-container .grid-item .daysIndicator {
-        padding: 14px;
-        border-bottom: 3px solid #d7e1e5; }
+        height: 8vw;
+        border-bottom: 1px solid #d7e1e5;
+        border-right: 1px solid #d7e1e5;
+        padding-top: 2vw; }
+        @media (min-width: 768px) and (max-width: 1023px) {
+          .Home .Home_containerBackground .grid-container .grid-item .daysIndicator {
+            height: 60px; } }
+        @media (min-width: 1024px) {
+          .Home .Home_containerBackground .grid-container .grid-item .daysIndicator {
+            height: 57px; } }
       .Home .Home_containerBackground .grid-container .grid-item .grid-item-custom {
-        padding: 25px;
+        height: 8vw;
         cursor: pointer;
-        border-bottom: 3px solid #d7e1e5; }
+        border-bottom: 1px solid #d7e1e5;
+        border-right: 1px solid #d7e1e5; }
+        @media (min-width: 768px) and (max-width: 1023px) {
+          .Home .Home_containerBackground .grid-container .grid-item .grid-item-custom {
+            height: 60px; } }
+        @media (min-width: 1024px) {
+          .Home .Home_containerBackground .grid-container .grid-item .grid-item-custom {
+            height: 57px; } }
+      .Home .Home_containerBackground .grid-container .grid-item .grid-item-disabled {
+        background-color: #d7e1e5;
+        height: 8vw; }
+        @media (min-width: 768px) and (max-width: 1023px) {
+          .Home .Home_containerBackground .grid-container .grid-item .grid-item-disabled {
+            height: 60px; } }
+        @media (min-width: 1024px) {
+          .Home .Home_containerBackground .grid-container .grid-item .grid-item-disabled {
+            height: 57px; } }
