--- a/src/sass/_var.scss
+++ b/src/sass/_var.scss
@@ -14,3 +14,6 @@ $pink300: #f06292;
 $pink400: #ec407a;
 $pink-main: #e91e63;
 
+@import url('https://fonts.googleapis.com/css?family=Neucha');
+
+$hand-writing : "Neucha",cursive;
