--- a/src/components/ilgi/Feed/FeedHeader/FeedHeader.css
+++ b/src/components/ilgi/Feed/FeedHeader/FeedHeader.css
@@ -4,7 +4,7 @@
     display: block;
     margin: 30px 0 30px 30px; }
     .FeedHeader .FH_form label {
-      font-size: 1.5em; }
+      font-size: 1.7em; }
   .FeedHeader feedheader-color {
     display: block;
     text-align: center; }
@@ -40,3 +40,53 @@
         .FeedHeader feedheader-color div {
           width: 4.5vw;
           height: 4.5vw; } }
+  .FeedHeader feedheader-month {
+    display: block;
+    text-align: center; }
+    .FeedHeader feedheader-month div {
+      background-color: #CFD8DC;
+      opacity: 0.5;
+      display: inline-block;
+      width: 13vw;
+      height: 13vw;
+      margin: 1vw;
+      box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
+      border-radius: 5px;
+      position: relative;
+      cursor: pointer; }
+      .FeedHeader feedheader-month div::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        opacity: 0;
+        border-radius: 5px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+        transition: opacity 0.3s ease-in-out; }
+      .FeedHeader feedheader-month div:hover::after {
+        opacity: 1; }
+      @media (min-width: 768px) and (max-width: 1023px) {
+        .FeedHeader feedheader-month div {
+          width: 9vw;
+          height: 9vw; } }
+      @media (min-width: 1024px) {
+        .FeedHeader feedheader-month div {
+          width: 6vw;
+          height: 6vw; } }
+      .FeedHeader feedheader-month div span {
+        display: none; }
+        @media (min-width: 400px) and (max-width: 767px) {
+          .FeedHeader feedheader-month div span {
+            font-size: 1.3em;
+            display: block; } }
+        @media (min-width: 768px) and (max-width: 1023px) {
+          .FeedHeader feedheader-month div span {
+            font-size: 1.3em;
+            display: block; } }
+        @media (min-width: 1024px) {
+          .FeedHeader feedheader-month div span {
+            display: block;
+            font-size: 1.8em; } }
