--- a/src/components/ilgi/Feed/FeedHeader/FeedHeader.scss
+++ b/src/components/ilgi/Feed/FeedHeader/FeedHeader.scss
@@ -6,7 +6,7 @@
      display: block;
      margin:30px 0 30px 30px;
      label{
-         font-size: 1.5em;
+         font-size: 1.7em;
      }
  }
  feedheader-color{
@@ -27,6 +27,43 @@
       @include desktop {
         width: 4.5vw;
         height: 4.5vw;
+      }
+    }
+  }
+  feedheader-month{
+    display: block;
+    text-align: center;
+    div {
+      background-color:#CFD8DC; 
+      opacity: 0.5;
+      display: inline-block;
+      width: 13vw;
+      height: 13vw;
+      margin: 1vw;
+      @include boxshadow-hover-effect;
+
+      @include tablet {
+        width: 9vw;
+        height: 9vw;
+      }
+      @include desktop {
+        width: 6vw;
+        height: 6vw;
+      }
+      span{
+          display: none;
+          @media (min-width:400px) and (max-width: #{768px - 1px}) {
+        font-size: 1.3em;
+display: block;
+          }
+          @include tablet {
+            font-size: 1.3em;
+            display: block;
+      }
+      @include desktop {
+        display: block;
+        font-size: 1.8em;
+      }
       }
     }
   }
