--- a/src/components/myaccount/Graph/GraphHeader/GraphHeader.scss
+++ b/src/components/myaccount/Graph/GraphHeader/GraphHeader.scss
@@ -1,49 +1,52 @@
 @import "../../../../sass/_mixin.scss";
 @import "../../../../sass/_media.scss";
-.GraphHeader{
-    width: 100vw;
- .GH_form{
-     display: block;
-     margin:30px 0 30px 30px;
-          label{
-         font-size: 1.7em;
-     }
- }
+.GraphHeader {
+  width: 100vw;
+  .GH_form {
+    display: block;
+    margin: 30px 0 30px 30px;
+    label {
+      font-size: 1.7em;
+    }
+    
+    @include tablet {
+      margin : 50px 0 30px 15vw;
+    }
+    @include desktop {
+      margin : 50px 0 30px 18vw;
+    }
+  }
 
-  graphHeader-month{
+  graphHeader-month {
     display: block;
     text-align: center;
     div {
-      background-color:#CFD8DC; 
+      background-color: #cfd8dc;
       opacity: 0.5;
       display: inline-block;
-      width: 13vw;
-      height: 13vw;
+      width: 6vw;
+      height: 6vw;
       margin: 1vw;
       @include boxshadow-hover-effect;
 
       @include tablet {
-        width: 9vw;
-        height: 9vw;
+        width: 5vw;
+        height: 5vw;
       }
       @include desktop {
-        width: 6vw;
-        height: 6vw;
+        width: 4vw;
+        height: 4vw;
       }
-      span{
-          display: none;
-          @media (min-width:400px) and (max-width: #{768px - 1px}) {
-        font-size: 1.3em;
-display: block;
-          }
-          @include tablet {
-            font-size: 1.3em;
-            display: block;
-      }
-      @include desktop {
+      span {
         display: block;
-        font-size: 1.8em;
-      }
+        @include tablet {
+          margin-top:5px;
+          font-size: 1.3em;
+        }
+        @include desktop {
+          margin-top:5px;
+          font-size: 1.8em;
+        }
       }
     }
   }
