--- a/src/components/myaccount/Profile/Profile.scss
+++ b/src/components/myaccount/Profile/Profile.scss
@@ -45,12 +45,15 @@
     }
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     profile-userInfo {
       text-align: center;
       font-family: $hand-writing;
     }
-    .MuiCardMedia-media-30 {
+    .Profile_img{
+        margin-left:20px;
       width: 50%;
+      max-width: 50%;
       height: 50%;
     }
   }
