--- a/src/components/Inbox/Quote/EditQuote/EditQuote.scss
+++ b/src/components/Inbox/Quote/EditQuote/EditQuote.scss
@@ -2,9 +2,9 @@
 
 .EditQuote{
     text-align: right;
-    width: 85vw;
+    width: 88vw;
     margin:0 auto;
-    padding: 50px 30px;
+    padding: 20px;
     @include tablet{
         width: 60vw;
         padding: 100px 50px;
