--- a/src/components/myaccount/Profile/Profile.scss
+++ b/src/components/myaccount/Profile/Profile.scss
@@ -4,7 +4,7 @@
 .Profile {
   div {
     width: 85vw;
-    margin: 20px auto;
+    margin: 80px auto 20px;
     padding: 20px;
     @include tablet {
       width: 60vw;
