--- a/src/components/Inbox/Event/Event.css
+++ b/src/components/Inbox/Event/Event.css
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Neucha");
 .Event_Card {
   width: 85vw;
   margin: 20px auto;
-  padding: 20px; }
+  padding: 60px; }
   @media (min-width: 768px) and (max-width: 1023px) {
     .Event_Card {
       width: 50%;
@@ -10,3 +11,12 @@
     .Event_Card {
       width: 50%;
       margin: 20px; } }
+  .Event_Card .Event_content {
+    text-align: center; }
+    .Event_Card .Event_content h1 {
+      margin-top: 0;
+      color: #3F51B5;
+      text-transform: uppercase;
+      font-family: "Neucha", cursive; }
+    .Event_Card .Event_content h3 {
+      font-weight: lighter; }
