--- a/src/components/ilgi/Feed/FeedHeader/FeedHeader.scss
+++ b/src/components/ilgi/Feed/FeedHeader/FeedHeader.scss
@@ -1,15 +1,16 @@
 @import "../../../../sass/_mixin.scss";
 @import "../../../../sass/_media.scss";
-.FeedHeader{
-    width: 100vw;
- .FH_form{
-     display: block;
-     margin:10px 0 30px 40px;
-     label{
-         font-size: 1.7em;
-     }
- }
- feedheader-color{
+.FeedHeader {
+  margin-top:80px;
+  width: 100vw;
+  .FH_form {
+    display: block;
+    margin: 10px 0 30px 40px;
+    label {
+      font-size: 1.7em;
+    }
+  }
+  feedheader-color {
     display: block;
     text-align: center;
     div {
@@ -30,11 +31,11 @@
       }
     }
   }
-  feedheader-month{
+  feedheader-month {
     display: block;
     text-align: center;
     div {
-      background-color:#CFD8DC; 
+      background-color: #cfd8dc;
       opacity: 0.5;
       display: inline-block;
       width: 13vw;
@@ -50,20 +51,20 @@
         width: 6vw;
         height: 6vw;
       }
-      span{
-          display: none;
-          @media (min-width:400px) and (max-width: #{768px - 1px}) {
-        font-size: 1.3em;
-display: block;
-          }
-          @include tablet {
-            font-size: 1.3em;
-            display: block;
-      }
-      @include desktop {
-        display: block;
-        font-size: 1.8em;
-      }
+      span {
+        display: none;
+        @media (min-width:400px) and (max-width: #{768px - 1px}) {
+          font-size: 1.3em;
+          display: block;
+        }
+        @include tablet {
+          font-size: 1.3em;
+          display: block;
+        }
+        @include desktop {
+          display: block;
+          font-size: 1.8em;
+        }
       }
     }
   }
