--- a/src/components/myaccount/Graph/GraphHeader/GraphHeader.css
+++ b/src/components/myaccount/Graph/GraphHeader/GraphHeader.css
@@ -1,5 +1,6 @@
 .GraphHeader {
-  width: 100vw; }
+  width: 100vw;
+  margin-top: 80px; }
   .GraphHeader .GH_form {
     display: block;
     margin: 30px 0 30px 30px; }
@@ -10,7 +11,7 @@
         margin: 50px 0 30px 15vw; } }
     @media (min-width: 1024px) {
       .GraphHeader .GH_form {
-        margin: 50px 0 30px 18vw; } }
+        margin: 50px 0 30px 25vw; } }
   .GraphHeader graphHeader-month {
     display: block;
     text-align: center; }
