--- a/src/components/ilgi/Feed/Feed.scss
+++ b/src/components/ilgi/Feed/Feed.scss
@@ -2,25 +2,25 @@ $dense: 0.5 !default;
 @import "../../../sass/_var.scss";
 @import "../../../sass/_media.scss";
 .Feed {
-    display: flex;
-    flex-wrap: wrap;
-    @include tablet{
-      width: 80vw;
-      margin:0 auto;
-    }
-    @include desktop{
+  display: flex;
+  flex-wrap: wrap;
+  @include tablet {
+    width: 80vw;
+    margin: 0 auto;
+  }
+  @include desktop {
     width: 60vw;
-    margin:0 auto;
-    }
+    margin: 0 auto;
+  }
   .Feed_card {
-      width: 90%;
-      margin:20px auto 0; 
-      @include tablet{
-        width: 48%
-      }
-      @include desktop{
-         width:48%;
-      }
+    width: 90%;
+    margin: 20px auto 0;
+    @include tablet {
+      width: 48%;
+    }
+    @include desktop {
+      width: 48%;
+    }
     .Feed_header {
       opacity: $dense;
       span {
@@ -34,34 +34,38 @@ $dense: 0.5 !default;
         font-size: 1.8em;
         font-weight: bold;
       }
+      .Feed_menu {
+        .MuiPaper-elevation8-19{
+        }
+      }
     }
     .Feed_content {
       font-family: $hand-writing;
       white-space: pre-wrap;
-      margin:0 10px;
-       h1 {
-        margin-top:0;
+      margin: 0 10px;
+      h1 {
+        margin-top: 0;
         font-weight: lighter;
         font-size: 1.5em;
-        @include tablet{
+        @include tablet {
           font-size: 2em;
         }
-        @include desktop{
-        //  font-size: 2.5em;
+        @include desktop {
+          //  font-size: 2.5em;
         }
       }
     }
   }
-  feed-footer{
+  feed-footer {
     height: 65px;
     position: relative;
     bottom: 0;
     width: 100vw;
     display: block;
   }
-  feed-nopixel{
+  feed-nopixel {
     margin: 150px auto;
-    font-family:$hand-writing;
-    font-size:1.4em;
+    font-family: $hand-writing;
+    font-size: 1.4em;
   }
 }
