feed hex to rgba color

--- a/src/components/ilgi/Pixel/Edit/EditColor/EditColor.css
+++ b/src/components/ilgi/Pixel/Edit/EditColor/EditColor.css
@@ -27,7 +27,7 @@
       position: relative;
       cursor: pointer; }
       .EditColor editColor-colors div::after {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
