--- a/src/components/ilgi/Feed/Feed.css
+++ b/src/components/ilgi/Feed/Feed.css
@@ -19,14 +19,13 @@
     @media (min-width: 1024px) {
       .Feed .Feed_card {
         width: 48%; } }
-    .Feed .Feed_card .Feed_header {
-      opacity: 0.5; }
-      .Feed .Feed_card .Feed_header span {
-        color: white;
-        color: black; }
-      .Feed .Feed_card .Feed_header span:first-child {
-        font-size: 1.8em;
-        font-weight: bold; }
+    .Feed .Feed_card .Feed_header span {
+      color: black; }
+    .Feed .Feed_card .Feed_header span:first-child {
+      font-size: 1.8em;
+      font-weight: bold; }
+    .Feed .Feed_card .Feed_header .Feed_action .Feed_btn_hide {
+      display: none; }
     .Feed .Feed_card .Feed_content {
       font-family: "Neucha", cursive;
       white-space: pre-wrap;
@@ -38,13 +37,13 @@
         @media (min-width: 768px) and (max-width: 1023px) {
           .Feed .Feed_card .Feed_content h1 {
             font-size: 2em; } }
-  .Feed feed-footer {
-    height: 65px;
-    position: relative;
-    bottom: 0;
-    width: 100vw;
-    display: block; }
-  .Feed feed-nopixel {
-    margin: 150px auto;
-    font-family: "Neucha", cursive;
-    font-size: 1.4em; }
+    .Feed .Feed_card feed-footer {
+      height: 65px;
+      position: relative;
+      bottom: 0;
+      width: 100vw;
+      display: block; }
+    .Feed .Feed_card feed-nopixel {
+      margin: 150px auto;
+      font-family: "Neucha", cursive;
+      font-size: 1.4em; }
