--- a/src/components/ilgi/Feed/Feed.scss
+++ b/src/components/ilgi/Feed/Feed.scss
@@ -1,6 +1,6 @@
-$dense: 0.5 !default;
 @import "../../../sass/_var.scss";
 @import "../../../sass/_media.scss";
+@import "../../../sass/_mixin.scss";
 .Feed {
   display: flex;
   flex-wrap: wrap;
@@ -22,20 +22,21 @@ $dense: 0.5 !default;
       width: 48%;
     }
     .Feed_header {
-      opacity: $dense;
       span {
-        //   font-size:1.5em;
-        color: white;
-        @if $dense <0.6 {
-          color: black;
-        }
+        color: black;
       }
+
       span:first-child {
         font-size: 1.8em;
         font-weight: bold;
       }
-      .Feed_menu {
-        .MuiPaper-elevation8-19{
+      .Feed_action {
+        .Feed_btn {
+          button {
+          }
+        }
+        .Feed_btn_hide {
+          display: none;
         }
       }
     }
@@ -55,17 +56,17 @@ $dense: 0.5 !default;
         }
       }
     }
-  }
-  feed-footer {
-    height: 65px;
-    position: relative;
-    bottom: 0;
-    width: 100vw;
-    display: block;
-  }
-  feed-nopixel {
-    margin: 150px auto;
-    font-family: $hand-writing;
-    font-size: 1.4em;
+    feed-footer {
+      height: 65px;
+      position: relative;
+      bottom: 0;
+      width: 100vw;
+      display: block;
+    }
+    feed-nopixel {
+      margin: 150px auto;
+      font-family: $hand-writing;
+      font-size: 1.4em;
+    }
   }
 }
