--- a/src/components/ilgi/Feed/FeedHeader/FeedHeader.css
+++ b/src/components/ilgi/Feed/FeedHeader/FeedHeader.css
@@ -20,7 +20,7 @@
       position: relative;
       cursor: pointer; }
       .FeedHeader feedheader-color div::after {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
@@ -56,7 +56,7 @@
       position: relative;
       cursor: pointer; }
       .FeedHeader feedheader-month div::after {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
