--- a/src/sass/_mixin.scss
+++ b/src/sass/_mixin.scss
@@ -1,30 +1,30 @@
 ///box shadow
 @mixin boxshadow-hover-effect {
-    box-shadow: 0 2px 3px rgba(0,0,0,0.15);
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  position: relative;
+  cursor: pointer;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0;
     border-radius: 5px;
-    position: relative;
-    cursor: pointer;
-    &::after{
-        content: '';
-        position: absolute;
-        top:0;
-        left:0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        opacity: 0;
-        border-radius: 5px;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-        transition: opacity 0.3s ease-in-out;
-      }
-      &:hover::after{
-          opacity: 1;
-      }
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    transition: opacity 0.3s ease-in-out;
+  }
+  &:hover::after {
+    opacity: 1;
+  }
 }
 
 //buttons
 
-@mixin regular-button{
+@mixin regular-button {
   color: rgba(0, 0, 0, 0.87);
   margin: 8px;
   border: 0;
@@ -39,14 +39,15 @@
   font-weight: 500;
   border-radius: 4px;
   text-transform: uppercase;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   &:hover {
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0.08);
-}
+  }
 }
 
-@mixin custom-button($color,$font-size){
-   
-  }
-  
+@mixin removeOpacityFromChild($alpha, $color) {
+  background-color: rgba(red($color), green($color), blue($color), $alpha);
+}
